# zkML-inspector-benchmark

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
dataset_generator/: README.md  __init__.py  __main__.py  artifacts.py  assembler.py  cli.py  conflict.py  edits.py  emit.py  iterative_runner.py  probes.py  revert.py  sources.py  strategies.py
dataset_generator/schemas/: artifact.v2.schema.json
dataset_generator/tests/: test_core.py  test_end_to_end.py
dataset_loader/: README.md  __init__.py  __main__.py  cli.py  materialize.py
dataset_loader/tests/: test_loader.py
examples/: README.md  agent_output.example.json
grader/: __init__.py  __main__.py  baseline.py  cli.py  judge_trace.py  llm.py  loader.py  matcher.py  report.py  scorers.py  similarity.py
grader/tests/: conftest.py  test_agent_output.json  test_baseline.py  test_cli.py  test_cli_llm.py  test_llm.py  test_llm_judge.py  test_loader.py  test_matcher.py  test_matcher_llm.py  test_report.py  test_scorers.py  test_similarity.py
